--- a/2. Full Stack JavaScript/4. React/CV Application/src/components/form/form-section.module.css
+++ b/2. Full Stack JavaScript/4. React/CV Application/src/components/form/form-section.module.css
@@ -4,7 +4,7 @@
   border-radius: 1rem;
   border: 5px solid var(--white);
   background-color: var(--offwhite);
-  filter: drop-shadow(0px 4px 8px hsl(0 0 0 / 10%));
+  box-shadow: 0 4px 8px hsl(0 0 0 / 10%);
 }
 
 .sectionHeader {
